--- a/src/app/features/owner/schedule-owner/schedule-owner-book/schedule-owner-book.component.html
+++ b/src/app/features/owner/schedule-owner/schedule-owner-book/schedule-owner-book.component.html
@@ -128,7 +128,7 @@
             <button class="px-4 py-2 border rounded hover:bg-gray-100" (click)="closeModal()">Hủy bỏ</button>
             <button class="px-4 py-2 bg-primary text-white rounded hover:bg-primary-dark" 
                     [disabled]="selectedSlot.status === 'NOT_AVAILABLE'"
-                    (click)="saveSlotChanges()">Cập nhật</button>
+                    (click)="saveSlotChanges()">Xác nhận</button>
         </div>
     </div>
 </div>
