--- a/src/app/features/statistical/statistical-list/statistical-list.component.html
+++ b/src/app/features/statistical/statistical-list/statistical-list.component.html
@@ -1,4 +1,8 @@
 <div class="w-full py-10 px-5">
+  <div (click)="openPopupHistory()" class="text-red-500 text-[16px] mb-[20px] cursor-pointer flex items-center gap-2">
+    <i class="fa-solid fa-arrow-right"></i>
+    <span class="underline">Xem lịch sử đơn hàng</span>
+  </div>
   <div class="w-full flex items-center gap-5">
     <div class="h-full flex-1 flex flex-col items-start justify-start p-4 rounded-lg bg-gray-200">
       <div class="text-[20px] font-normal text-black">Doanh thu tháng</div>
@@ -41,3 +45,9 @@
     </div>
   </div>
 </div>
+
+<app-popup-list-history 
+  [isVisible]="isHistoryVisible" 
+  [listHistory]="listHistory"
+  (changeVisibleHistory)="handleHistoryVisibilityChange($event)">
+</app-popup-list-history>
