search history list

--- a/src/assets/styles/antdesign.scss
+++ b/src/assets/styles/antdesign.scss
@@ -91,3 +91,8 @@ span.ant-progress-text.ng-star-inserted {
   border-top-left-radius: 20px !important;
   border-top-right-radius: 20px !important;
 }
+
+.ant-modal-title {
+  font-size: 20px !important;
+  color: red !important;
+}
