--- a/src/app/features/statistical/statistical-list/popup-list-history/popup-list-history.component.html
+++ b/src/app/features/statistical/statistical-list/popup-list-history/popup-list-history.component.html
@@ -2,6 +2,19 @@
     [nzFooter]="modalFooter" (nzOnCancel)="handleCancel()" [nzTitle]="'Lịch sử đơn đặt hàng'" class="rounded-xl">
 
     <ng-template #modalContent>
+        <div class="flex w-full gap-5 items-start">
+            <mat-form-field class="custom-input w-[40%]" appearance="outline">
+                <input matInput placeholder="Tìm kiếm theo tên sân"/>
+            </mat-form-field>
+            <mat-form-field class="custom-input w-[40%]" appearance="outline">
+                <input matInput [matDatepicker]="startDatePicker" placeholder="Ngày đặt sân">
+                <mat-datepicker-toggle matSuffix [for]="startDatePicker"></mat-datepicker-toggle>
+                <mat-datepicker #startDatePicker></mat-datepicker>
+            </mat-form-field>
+            <div class="py-2 px-4 border-none rounded-[6px] bg-primary font-medium text-white text-[16px] cursor-pointer">
+                Tìm kiếm
+            </div>
+        </div>
         <div *ngIf="listHistory.length === 0" class="text-center py-5">
             Không có dữ liệu đơn hàng
         </div>
