--- a/src/app/layouts/main/main.component.html
+++ b/src/app/layouts/main/main.component.html
@@ -44,6 +44,10 @@
           <i class="fa-solid fa-comments-dollar"></i>
           <span class="ml-3">Quản lý giá</span>
         </li>
+        <li nz-menu-item [routerLink]="['/', 'banner']" nzMatchRouter class="menu-item">
+          <i class="fa-regular fa-images"></i>
+          <span class="ml-3">Quản lý Banner</span>
+        </li>
         <li nz-menu-item [routerLink]="['/', 'setting']" nzMatchRouter class="menu-item">
           <i class="fa-solid fa-gear"></i>
           <span class="ml-3">Cài đặt</span>
