--- a/src/app/features/register/register.component.html
+++ b/src/app/features/register/register.component.html
@@ -13,6 +13,9 @@
                         <div>
                             <input class="h-[40px] w-full rounded-[5px] px-[10px] py-[8px] outline-none border-none" formControlName="username" />
                         </div>
+                        <span *ngIf="userNameError" class="text-red-500 text-sh">
+                            <i class="fa-solid fa-triangle-exclamation"></i> {{userNameError}}
+                        </span>
                     </div>
                     <div class="flex flex-col w-full flex-1 gap-[6px]">
                         <span class="text-white">Họ và tên</span>
